# NLP-with-Twitter

./: .gitignore  README.md  gettingstarted.ipynb  playing_around.ipynb  pyproject.toml  requirements.txt
notebooks/: 1-eda.ipynb  2-modeling.ipynb  opeanAI.ipynb
results/: OpenAi_submission.csv
src/: features.py
